--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "jotai": "^2.0.3",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-player": "^2.12.0",
     "sass": "^1.59.2",
     "superjson": "1.9.1",
     "zod": "^3.20.6"
