--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
